--- a/challenge-charlie-frontend/src/App.css
+++ b/challenge-charlie-frontend/src/App.css
@@ -1,1 +1,14 @@
+html,
+body {
+    height: 100%;
+    margin: 0px;
+}
+body {
+    display: flex;
+    align-items: stretch;
+}
 
+#root {
+    width: 100%;
+    margin: 0px;
+}
