--- a/challenge-charlie-frontend/src/components/WeatherCurrent/styles.scss
+++ b/challenge-charlie-frontend/src/components/WeatherCurrent/styles.scss
@@ -9,10 +9,30 @@
     flex-wrap: wrap;
 }
 
+#current-grid {
+    margin-right: 2em;
+}
+
+#desc-text {
+    font-size: 1.4em;
+    margin-bottom: 1em;
+    margin-top: 1em;
+}
+
 @media screen and (max-width: 1000px) {
     #current-box {
         margin-left: unset;
         margin-right: unset;
         font-size: 1.8em;
+    }
+
+    #desc-text {
+        font-size: 1.2em;
+        margin-bottom: 0.3em;
+        margin-top: 0.3em;
+    }
+
+    #current-grid {
+        margin-right: 1em;
     }
 }
