--- a/challenge-charlie-frontend/src/components/WeatherForecast/styles.scss
+++ b/challenge-charlie-frontend/src/components/WeatherForecast/styles.scss
@@ -22,6 +22,7 @@
     #forecast-box {
         margin-left: unset;
         margin-right: unset;
+        height: 8%;
         font-size: 1.8em;
     }
 
