--- a/challenge-charlie-frontend/src/components/WeatherForecast/styles.scss
+++ b/challenge-charlie-frontend/src/components/WeatherForecast/styles.scss
@@ -2,11 +2,12 @@
     color: rgb(255, 255, 255);
     margin-left: 20%;
     margin-right: 20%;
-    height: 25%;
     font-size: 2.4em;
     font-family: "Trebuchet MS", "Lucida Sans Unicode", "Lucida Grande",
         "Lucida Sans", Arial, sans-serif;
     flex-wrap: wrap;
+    align-content: center;
+    height: 4.53em;
 }
 
 #temp_text {
@@ -15,22 +16,23 @@
 }
 
 #forecast-grid {
+    margin-top: 30px;
+    margin-bottom: 10px;
     margin-right: 2em;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: center;
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (max-width: 1260px) {
     #forecast-box {
         margin-left: unset;
         margin-right: unset;
-        height: 8%;
         font-size: 1.8em;
     }
 
     #forecast-grid {
         margin-right: 1em;
-    }
-
-    #temp_text {
-        cursor: pointer;
     }
 }
