--- a/challenge-charlie-frontend/src/pages/Home/styles.scss
+++ b/challenge-charlie-frontend/src/pages/Home/styles.scss
@@ -1,7 +1,8 @@
 .page-home {
-    width: 100%;
-    height: 100%;
     margin: 0px;
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
     background-position: center center;
     background-repeat: no-repeat;
     background-attachment: fixed;
